--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Bem Vindos as Experiências</h1>
-    <p>Esse site tera as melhores fotos que as experiências da vida poção proporcionar, e tudo de bom que ha nela &#x1F60D; </p>
+    <p>Esse site terá as melhores fotos que as experiências da vida poção proporcionar, e tudo de bom que há nela &#x1F60D; </p>
     <p>E umas das melhores coisas que aconteceu na minha vida nas ultima semanas foi a gabi, eu sinceramente não sei como <br>
-    uma pessao pode te fazer sentir tão bem, esse site todo é uma homenagem a ela, e vou me dedicar muito para que ele fique <br>o mais lindo possivel ( e não vai chegar aos pes da belesa dela &#x1F60D; ), essa ft é uma das fts que ela está mais linda na <br> minha opinião</p>
+    uma pessao pode te fazer sentir tão bem, esse site todo é uma homenagem a ela, e vou me dedicar muito para que ele fique <br>o o mais lindo possivel ( e não vai chegar aos pes da belesa dela &#x1F60D; ), essa ft é uma das fts que ela está mais linda na <br> minha opinião &#x2764;</p>
     <img src="fts_site/gabi camisa do cruzeiro.jpeg" alt="Meu mundo">
 
     <p>telefone de ctt whatsApp (31) 9 9770-4829</p>
