--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <h1>Bem Vindos as Experiências</h1>
+    <h2>Minhas experiências</h2>
+    <h3>Gabi</h3>
     <p>Esse site terá as melhores fotos que as experiências da vida poção proporcionar, e tudo de bom que há nela &#x1F60D; </p>
     <p>E umas das melhores coisas que aconteceu na minha vida nas ultima semanas foi a gabi, eu sinceramente não sei como <br>
-    uma pessao pode te fazer sentir tão bem, esse site todo é uma homenagem a ela, e vou me dedicar muito para que ele fique <br>o o mais lindo possivel ( e não vai chegar aos pes da belesa dela &#x1F60D; ), essa ft é uma das fts que ela está mais linda na <br> minha opinião &#x2764;</p>
+    uma pessao pode te fazer sentir tão bem, esse site todo é uma homenagem a ela, e vou me dedicar muito para que ele fique <br>o o mais lindo possivel ( e não vai chegar aos pes da belesa dela &#x1F60D; ), essa ft é uma das fts que ela está mais linda na <br> minha opinião &#x1F499;</p>
     <img src="fts_site/gabi camisa do cruzeiro.jpeg" alt="Meu mundo">
+    <p>Quando eu olho essa ft meu coração até era o ritmo kkkkkkk</p>
 
-    <p>telefone de ctt whatsApp (31) 9 9770-4829</p>
+    <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
     <p> Desenvouvido Por Infinity Sistem  &reg;</p>
 
 </body>
