--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Quando eu olho essa ft meu coração até era o ritmo kkkkkkk</p>
 
     <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
-    <p> Desenvouvido Por Infinity Sistem  &reg;</p>
+    <p> Desenvolvido Por Infinity Sistem  &reg;</p>
 
 </body>
 </html>
