--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="fts_site/icone_oficial_is.ico" type="image/x-icon">
     <title>Esperiências &#x1F499;&#x2764;</title>
 </head>
-<body>
+<body style="background-color: rgba(55, 85, 255, 0.404);">
     <h1>Bem Vindos as Experiências</h1>
     <p>Esse site terá as melhores fotos que as experiências da vida poção proporcionar, e tudo de bom que há nela &#x1F60D; </p>
     <h2>Minhas experiências</h2>
