--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     <p>E umas das melhores coisas que aconteceu na minha vida nas ultima semanas foi a gabi, eu sinceramente não sei como <br>
     uma pessao pode te fazer sentir tão bem, esse site todo é uma homenagem a ela, e vou me dedicar muito para que ele fique <br>o o mais lindo possivel ( e não vai chegar aos pes da belesa dela &#x1F60D; ), essa ft é uma das fts que ela está mais linda na <br> minha opinião &#x1F499;</p>
     <img src="fts_site/gabi camisa do cruzeiro.jpeg" alt="Meu mundo">
-    <p>Quando eu olho essa ft meu coração até era o ritmo kkkkkkk</p>
+    <p>Quando eu olho essa ft meu coração até erra o ritmo kkkkkkk</p>
 
+    <h2>Fotos do Céu</h2>
+    <p>Ela é uma menina muito encantadora, e encanta minha vida, mas uma das coisas que a encanta é o céu, ela ama o céu <br>
+    principalmente quanto esta anoitecendo, eu converso muito com ela sobre isso, e pq isso e por eu me sinto uma paz quando <br>
+    lembro dela, nao sei, me perdi no raciocínio kkkk, mas em fim eu sempre lembro dela quando olho pro céu ai eu fico até fraco &#x1F60D; </p>
+    <img src="fts_site/ft_do_ceu_eu_tirei.jpg" alt="Céu a noite ">
+    <p>essa ft me lembra muito ela, não sei nem pq, de todas as fts que ela memandou do céu acho que não tem nem uma a noite ksskskksksks <br> mas eu tinha acabado de mandar com dia pra ela ai saí pra ir pro serviço e tava esse céu, ai esqueci pai  skkskskksks <br> o coração ja errou até o compasso kskkskskskk</p>
+    <p>Obg Bixinho por fazer meus dias incriveis increvelmente incrivel skkskskskks &#x2764;<br></p>
     <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
     <p> Desenvolvido Por Infinity Sistem  &reg;</p>
 
