--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
     <h2>Fotos do Céu</h2>
     <p>Ela é uma menina muito encantadora, e encanta minha vida, mas uma das coisas que a encanta é o céu, ela ama o céu <br>
-    principalmente quanto esta anoitecendo, eu converso muito com ela sobre isso, e pq isso e por eu me sinto uma paz quando <br>
+    principalmente quanto esta anoitecendo, eu converso muito com ela sobre isso, e eu amooooo cvs ela e  por isso eu sinto uma paz quando <br>
     lembro dela, nao sei, me perdi no raciocínio kkkk, mas em fim eu sempre lembro dela quando olho pro céu ai eu fico até fraco &#x1F60D; </p>
     <img src="fts_site/ft_do_ceu_eu_tirei.jpg" alt="Céu a noite ">
     <p>essa ft me lembra muito ela, não sei nem pq, de todas as fts que ela memandou do céu acho que não tem nem uma a noite ksskskksksks <br> mas eu tinha acabado de mandar com dia pra ela ai saí pra ir pro serviço e tava esse céu, ai esqueci pai  skkskskksks <br> o coração ja errou até o compasso kskkskskskk</p>
     <p>Obg Bixinho por fazer meus dias incriveis increvelmente incrivel skkskskskks &#x2764;<br></p>
+    <p>hoje eu não estou muito bem pra escrever, vai ter dias que os textos vao te emocionar, vão ter dias que os textos <br>
+    te entediar, vai ter dias que os textos vão te empolgar, mas vai dempeder muito do meu emocional, pra saber escolher as palavras certas para descrever o que eu sinto com cada experiência da vida. </p>
     <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
     <p> Desenvolvido Por Infinity Sistem  &reg;</p>
 
