--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p>Obg Bixinho por fazer meus dias incriveis increvelmente incrivel skkskskskks &#x2764;<br></p>
     <p>hoje eu não estou muito bem pra escrever, vai ter dias que os textos vao te emocionar, vão ter dias que os textos <br>
     te entediar, vai ter dias que os textos vão te empolgar, mas vai dempeder muito do meu emocional, pra saber escolher as palavras certas para descrever o que eu sinto com cada experiência da vida. </p>
+    <p>Vão ter fts que ela tirou tbm e assusntos muitos mais aleatorios, pq esse site é um presente a ela, e quero que ela <br>saiba como é incrivel e impotante na minha vida kskkskskskks meu kalanginho lumbriguento </p>
     <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
     <p> Desenvolvido Por Infinity Sistem  &reg;</p>
 
