--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
     <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
     <p> Desenvolvido Por Infinity Sistem  &reg;</p>
 
+    <h2>Aleatoricidades kkkkk</h2>
+    <p>Boa noite, eu to aqui estudando um pouco e vi uma tag muito legal e ela deixa o texto ao contrario kkkk <br>
+    isso me lembrou umas conversas que eu tinha as veses com a minha princesa a Gabi, eu conversava com ela ai na hora <br>
+    de a gente se despedir eu manda boa noite e ela mandava boa e eu respodia <bdo dir="rtl">boa noite</bdo> <br>
+    e eu tinha que escreve ao contra agora eu não precisei so escrevi boa noite dentro da tag bdo e ela inverteu para mim <br> 
+    eu sei que é bem aleatorio mas é isso assim é a minha mente kkkkksks</p>
 </body>
 </html>
