--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p>Boa noite, eu to aqui estudando um pouco e vi uma tag muito legal e ela deixa o texto ao contrario kkkk <br>
     isso me lembrou umas conversas que eu tinha as veses com a minha princesa a Gabi, eu conversava com ela ai na hora <br>
     de a gente se despedir eu manda boa noite e ela mandava boa e eu respodia <bdo dir="rtl">boa noite</bdo> <br>
-    e eu tinha que escreve ao contra agora eu não precisei so escrevi boa noite dentro da tag bdo e ela inverteu para mim <br> 
+    e eu tinha que escreve ao contra agora eu não precisei escrever ao contrario agora eu so escrevi boa noite dentro da tag bdo e ela inverteu para mim <br> 
     eu sei que é bem aleatorio mas é isso assim é a minha mente kkkkksks</p>
 
     <h2>Meu Mundo &#x1F499; &#x1F499; </h2>
