--- a/index.html
+++ b/index.html
@@ -48,5 +48,8 @@
     e vc meu anjo, faz eu querer viver o plano original &#x1F60D;, Desculpa se pareço um pouco emocionado, não é isso, <br> esse pensamento erra de criança hj infelismente eu penso como os adultos sksksksks espero que tenha entendido a referencia <q>O pequeno principe</q>, mas você é tão increvel que até me traz aquele pensamento, mas e se desse certo kskskkskskks . <br>por isso seu ctt é "Meu Mundo &#x1F499; &#x1F499;" pq vc  me lembra a ideia original de "mundo perfeito" .   </p>
     <p>Isso eu pensei agora, to ate chorando sabe, tipo de quando falo de fantasmas essas coisas sskksksksk, talvez por isso <br>algumas fts suas me lembra a mulhes lembranças da minha infnacia -figurinha do gaitnho com a mao na boca que eu uso pra <br> fazer drama skkskskksksk- Hj não tem ft, ja escrevi de mais kskskskskksksks to ate com medo de você ficar com prequiça de ler kkkk
     </p>
+
+    <p><strong>Telefone de ctt whatsApp (31) 9-9770-4829</strong></p>
+    <p>Desenvolvito Por Infinity Sistem &reg;</p>
 </body>
 </html>
