--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
     <p>Isso eu pensei agora, to ate chorando sabe, tipo de quando falo de fantasmas essas coisas sskksksksk, talvez por isso <br>algumas fts suas me lembra a mulhes lembranças da minha infnacia -figurinha do gaitnho com a mao na boca que eu uso pra <br> fazer drama skkskskksksk- Hj não tem ft, ja escrevi de mais kskskskskksksks to ate com medo de você ficar com prequiça de ler kkkk
     </p>
 
+    <h2>Palavras Da Minha Pricesa</h2>
+    <p>No inicio as palavras serão minhas, mas daqui apouco serão da Gabi <hr> 
+    Acada dia que passa eu gosto mais de voce amor, e voce ta fazendo cada dia meus mais incrivel <hr>
+    eu estou me sentindo cada dia com mais motivação e menos cansaso kskskksks por mais que eu durma menos <hr>
+    e quanto mais eu te conhesso mais quero estár com você, mais te acho incrivel, mais te vejo como uma princesinha &#x1F60D; <hr> mas hj infelismente eu não to bem pra escrever me desculpa &#x1F62D;&#x1F494; </p>
+    <p><Q>N tem muito contexto nem lembranças,mas eu amoo muitooo essa ft,é de semana passada,eu estava me sentindo extremamente <br>bem,era como se Deus escutasse absolutamente td q eu pedia &#2764; &#x2764;</Q></p>
+    <img src="fts_site/ft_ceu_gabi_site.jpeg" alt="ft_Gabi">
+
     <p><strong>Telefone de ctt whatsApp (31) 9-9770-4829</strong></p>
     <p>Desenvolvito Por Infinity Sistem &reg;</p>
 </body>
