add linhas para separar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <img src="fts_site/gabi camisa do cruzeiro.jpeg" alt="Meu mundo">
     <p>Quando eu olho essa ft meu coração até erra o ritmo kkkkkkk</p>
 
+    <hr>
+
     <h2>Fotos do Céu</h2>
     <p>Ela é uma menina muito encantadora, e encanta minha vida, mas uma das coisas que a encanta é o céu, ela ama o céu <br>
     principalmente quanto esta anoitecendo, eu converso muito com ela sobre isso, e eu amooooo cvs ela e  por isso eu sinto uma paz quando <br>
@@ -33,8 +35,8 @@
     <p>hoje eu não estou muito bem pra escrever, vai ter dias que os textos vao te emocionar, vão ter dias que os textos <br>
     te entediar, vai ter dias que os textos vão te empolgar, mas vai dempeder muito do meu emocional, pra saber escolher as palavras certas para descrever o que eu sinto com cada experiência da vida. </p>
     <p>Vão ter fts que ela tirou tbm, e assusntos muitos mais aleatorios, pq esse site é um presente a ela, e quero que ela <br>saiba como é incrivel e importante na minha vida kskkskskskks meu kalanginho lumbriguento </p>
-    <p><strong>telefone de ctt whatsApp (31) 9 9770-4829</strong></p>
-    <p> Desenvolvido Por Infinity Sistem  &reg;</p>
+
+    <hr>
 
     <h2>Aleatoricidades kkkkk</h2>
     <p>Boa noite, eu to aqui estudando um pouco e vi uma tag muito legal e ela deixa o texto ao contrario kkkk <br>
@@ -43,21 +45,27 @@
     e eu tinha que escreve ao contra agora eu não precisei escrever ao contrario agora eu so escrevi boa noite dentro da tag bdo e ela inverteu para mim <br> 
     eu sei que é bem aleatorio mas é isso assim é a minha mente kkkkksks</p>
 
+    <hr>
+
     <h2>Meu Mundo &#x1F499; &#x1F499; </h2>
     <p>Eu salvei o seu contato assim, pq ?, isso nem você sabe ksksksk, vai descobrir agora ksksskks, se vc ler isso um dia <br> por favor não me entenda mal meu anjo kkkkk, quando eu era criança meus sonhos e plano de vida era bem diferente do que é hj <br> na época eu queria ter uma familia ter uma esposa que me amasse, ter uma casa linda, um carro, um emprego bom <br>(emprego bom = um salario de 10.000 e que fosse de segunda a sexta ksksk) e essas viadagens ksksksksk, e hj meus planos são 100% diferente <br> eu quero ser rico, ter uma empresa nivel Microsoft, Aplle kskksksks mas esse é o plano secundario, <br>
     e vc meu anjo, faz eu querer viver o plano original &#x1F60D;, Desculpa se pareço um pouco emocionado, não é isso, <br> esse pensamento erra de criança hj infelismente eu penso como os adultos sksksksks espero que tenha entendido a referencia <q>O pequeno principe</q>, mas você é tão increvel que até me traz aquele pensamento, mas e se desse certo kskskkskskks . <br>por isso seu ctt é "Meu Mundo &#x1F499; &#x1F499;" pq vc  me lembra a ideia original de "mundo perfeito" .   </p>
     <p>Isso eu pensei agora, to ate chorando sabe, tipo de quando falo de fantasmas essas coisas sskksksksk, talvez por isso <br>algumas fts suas me lembra a mulhes lembranças da minha infnacia -figurinha do gaitnho com a mao na boca que eu uso pra <br> fazer drama skkskskksksk- Hj não tem ft, ja escrevi de mais kskskskskksksks to ate com medo de você ficar com prequiça de ler kkkk
     </p>
 
+    <hr>
+
     <h2>Palavras Da Minha Pricesa</h2>
-    <p>No inicio as palavras serão minhas, mas daqui apouco serão da Gabi <hr> 
-    Acada dia que passa eu gosto mais de voce amor, e voce ta fazendo cada dia meus mais incrivel <hr>
-    eu estou me sentindo cada dia com mais motivação e menos cansaso kskskksks por mais que eu durma menos <hr>
-    e quanto mais eu te conhesso mais quero estár com você, mais te acho incrivel, mais te vejo como uma princesinha &#x1F60D; <hr> mas hj infelismente eu não to bem pra escrever me desculpa &#x1F62D;&#x1F494; </p>
+    <p>No inicio as palavras serão minhas, mas daqui apouco serão da Gabi <br> 
+    Acada dia que passa eu gosto mais de voce amor, e voce ta fazendo cada bia meus mais incrivel <br>
+    eu estou me sentindo cada dia com mais motivação e menos cansaso kskskksks por mais que eu durma menos <br>
+    e quanto mais eu te conhesso mais quero estár com você, mais te acho incrivel, mais te vejo como uma princesinha &#x1F60D; <br> mas hj infelismente eu não to bem pra escrever me desculpa &#x1F62D;&#x1F494; </p>
     <p><Q>N tem muito contexto nem lembranças,mas eu amoo muitooo essa ft,é de semana passada,eu estava me sentindo extremamente <br>bem,era como se Deus escutasse absolutamente td q eu pedia &#2764; &#x2764;</Q></p>
     <img src="fts_site/ft_ceu_gabi_site.jpeg" alt="ft_Gabi">
 
+    <hr>
     <p><strong>Telefone de ctt whatsApp (31) 9-9770-4829</strong></p>
     <p>Desenvolvito Por Infinity Sistem &reg;</p>
+    <hr>
 </body>
 </html>
