--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     Acada dia que passa eu gosto mais de voce amor, e voce ta fazendo cada bia meus mais incrivel <br>
     eu estou me sentindo cada dia com mais motivação e menos cansaso kskskksks por mais que eu durma menos <br>
     e quanto mais eu te conhesso mais quero estár com você, mais te acho incrivel, mais te vejo como uma princesinha &#x1F60D; <br> mas hj infelismente eu não to bem pra escrever me desculpa &#x1F62D;&#x1F494; </p>
-    <p><Q>N tem muito contexto nem lembranças,mas eu amoo muitooo essa ft,é de semana passada,eu estava me sentindo extremamente <br>bem,era como se Deus escutasse absolutamente td q eu pedia &#2764; &#x2764;</Q></p>
+    <p><Q>N tem muito contexto nem lembranças,mas eu amoo muitooo essa ft,é de semana passada,eu estava me sentindo extremamente <br>bem,era como se Deus escutasse absolutamente td q eu pedia &#x2764; &#x2764;</Q></p>
     <img src="fts_site/ft_ceu_gabi_site.jpeg" alt="ft_Gabi">
 
     <hr>
