Colocando empresa em italico (em)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <hr>
     <p><strong>Telefone de ctt whatsApp (31) 9-9770-4829</strong></p>
-    <p>Desenvolvito Por Infinity Sistem &reg;</p>
+    <p><em>Desenvolvito Por Infinity Sistem</em> &reg;</p>
     <hr>
 </body>
 </html>
